--- a/src/pages/procesosPages/est_valija_11terminalesVoucher.astro
+++ b/src/pages/procesosPages/est_valija_11terminalesVoucher.astro
@@ -4,10 +4,11 @@ import Huella from '../../components/ConfirmHuella.astro';
 import CustomPdfInput from '../../components/customInput/CustomPdfInput.svelte';
 export const prerender = false;
 const idsSubprocesos = [32,33,34]; // IDs de subprocesos a actualizar
+const IdProcesoDia = Astro.url.searchParams.get('Id');
 
 ---
 
-<Layout title="Corte de terminales con voucher" idsSubprocesos={idsSubprocesos}>
+<Layout title="Corte de terminales con voucher" idsSubprocesos={idsSubprocesos} IdProcesoDia={IdProcesoDia}>
   
 <div class="container mx-auto p-6 bg-white shadow-md font-sans rounded-lg">
 
