--- a/src/pages/procesosPages/est_valija_9jarreo.astro
+++ b/src/pages/procesosPages/est_valija_9jarreo.astro
@@ -4,10 +4,11 @@ import "../../styles/global.css";
 import JarreoCards from '../../components/JarreoCards.svelte';
 export const prerender = false;
 const idsSubprocesos = [25,26,27,28]; // IDs de subprocesos a actualizar
+const IdProcesoDia = Astro.url.searchParams.get('Id');
 
 ---
 
-<Layout title="Jarreo de Documentos" idsSubprocesos={idsSubprocesos}>
+<Layout title="Jarreo de Documentos" idsSubprocesos={idsSubprocesos} IdProcesoDia={IdProcesoDia}>
   <div class="max-w-5xl mx-auto p-8 bg-white rounded-md shadow-md">
     <h1 class="text-2xl font-bold mb-4">Jarreo de Documentos</h1>
     <p class="text-gray-600 mb-6">
